<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/login"
    style="@style/MyMaterialTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="183dp"
            android:layout_height="183dp"
            android:src="@drawable/app_icn"
            android:id="@+id/appIcon"
            android:layout_gravity="center">
        </ImageView>

        <EditText
            android:id="@+id/signup_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_vertical_spacing"
            android:hint="@string/nameHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signup_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_input_hint"/>

        <EditText
            android:id="@+id/signup_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_vertical_spacing"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/signup_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_vertical_spacing"
            android:fontFamily="sans-serif"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/signup_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_vertical_spacing"
            android:fontFamily="sans-serif"
            android:hint="@string/confirmPasswordHint"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_signup"
            android:layout_weight="0.5"
            android:background="#1E88E5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_vertical_spacing"
            android:text="@string/createAccount"/>

    </LinearLayout>
</RelativeLayout>