<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.parkingbuddy.Login_Signup_Forgot.ForgotPasswordFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="183dp"
            android:layout_height="183dp"
            android:src="@drawable/app_icn"
            android:id="@+id/appIcon"
            android:layout_gravity="center">
        </ImageView>

        <TextView
            android:id="@+id/login_help_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password_instructions" />

        <EditText
            android:id="@+id/login_help_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress">
        </EditText>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_submit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:background="#1E88E5"
            android:layout_marginLeft="@dimen/small_horizontal_spacing"
            android:layout_marginTop="@dimen/xlarge_vertical_spacing"
            android:text="@string/submit_button_label" />
    </LinearLayout>

</FrameLayout>

